Corrected alignments

--- a/src/App.css
+++ b/src/App.css
@@ -294,7 +294,7 @@ h2 {
 
 .skills--section--heading {
   color: var(--heading-color);
-  font-size: 64px;
+  font-size: 56px;
   font-weight: 700;
   line-height: 77px;
 }
@@ -811,6 +811,7 @@ input[type="checkbox"] {
   }
 
   .hero--section--title,
+  .hero--section-description,
   .footer--content {
     text-align: center;
   }
@@ -936,7 +937,7 @@ input[type="checkbox"] {
     align-items: center;
     justify-content: center;
     background-color: rgba(255, 255, 255);
-    top: -20rem;
+    top: -30rem;
     left: 0;
     width: 100%;
     transition: all ease-in-out 0.4s;
